Wed Mar 16 06:19:01 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Push all the code associated with indexing a file into
	  index_file().

Wed Mar 16 02:55:53 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Push try block around index_file() call into the
	  function.

Wed Mar 16 02:51:52 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Factor out handling for skipping files, and improve
	  these messages by consistently reporting the filename.

Tue Mar 15 12:47:12 GMT 2011  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/index.rst: Add index page which links to all
	  the other documentation pages.

Tue Mar 15 12:20:30 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Add --empty-docs option to allow documents we extract
	  no body text from to be indexed (existing behaviour), skipped, or
	  reported and then indexed.

Fri Mar 04 14:13:47 GMT 2011  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Minor improvements.

Wed Mar 02 11:17:42 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed Mar 02 06:14:41 GMT 2011  Olly Betts <olly@survex.com>

	* docs/termprefixes.rst: New standard prefix E for filename extension.
	* omindex.cc: Index file extension as E-prefixed term.

Mon Feb 28 13:45:32 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Tell xls2csv not to quote fields and to put spaces
	  not commas between them.  Fixes indexing of numeric fields, and
	  means we don't need to use our CSV parser to get a sample.

Mon Feb 28 12:10:53 GMT 2011  Olly Betts <olly@survex.com>

	* xmlparse.cc: Add whitespace between chunks of text extracted from
	  Microsoft Office 2007 formats.

Wed Feb 23 12:34:28 GMT 2011  Olly Betts <olly@survex.com>

	* templates/xml: Try $field{caption} (which is what omindex sets)
	  before $field{title} when getting a value for the hit tag's title
	  attribute - this is consistent with how the query template gets the
	  title.  Add new type attribute which gives $field{type}.
